Adds declare winner text and removes event listner when declared
Modifies event listner function to named function . Adds try again button .

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>TicTacToe</title>
-        <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
     <body>
         <main>
             <div>
-                <h1>Game board</h1>
-                <div class="game-board" data-value="1">
+                <h1>Tic - Tac - Toe</h1>
+                <div class="game-board" data-value="1"></div>
+                <div class="game-end-text">
+                    <div id="winner-text"></div>
+                    <button id="try-again-button">try again ?</button>
                 </div>
             </div>
         </main>
