--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
         <link rel="stylesheet" href="./styles/style.css" />
     </head>
     <body>
+        <header><h1>Tic - Tac - Toe</h1></header>
         <main>
-            <div>
-                <h1>Tic - Tac - Toe</h1>
-                <div class="game-board" data-value="1"></div>
-                <div class="game-end-text">
-                    <div id="winner-text"></div>
-                    <button id="try-again-button">try again ?</button>
-                </div>
+            <div class="game-board" data-value="1"></div>
+            <div class="game-end-text">
+                <div id="winner-text"></div>
+                <button id="try-again-button">Try again?</button>
             </div>
         </main>
         <script src="./script/app.js"></script>
